<resources>
    <string name="app_name">StockQuery</string>

    <string name="facebook_app_id">1692816167418180</string>

    <string name="main_title">Stock Market Search</string>
    <string name="main_getquote">Get Quote</string>
    <string name="main_clear">Clear</string>
    <string name="main_favorites">Favorites</string>
    <string name="main_auotrefresh">AutoRefresh</string>
    <string name="main_sortby">Sort by</string>
    <string name="main_order">Order</string>

    <string name="detail_current">CURRENT</string>
    <string name="detail_historical">HISTORICAL</string>
    <string name="detail_news">NEWS</string>


    <string-array name="sortby_array">
        <item>Sort by</item>
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
    </string-array>

    <string-array name="order_array">
        <item>Order</item>
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>

    <string-array name="indicators_array">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>MACD</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
    </string-array>

    <string name="no_symbol_error">Please enter a stock name or symbol.</string>

    <string name="stock_details">Stock Details</string>
    <string name="indicators">Indicators</string>
    <string name="change">Change</string>

    <string name="preference_file_key">com.yuyangma.stockquery.SYMBOLS</string>
    <string name="preference_symbols_key">symbols</string>

    // Favorite List text
    <string name="long_click_menu_title">Remove from favorites?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="selected_yes">Selected Yes</string>
    <string name="selected_no">Selected No</string>

    // Toast Text for Facebook share
    <string name="facebook_share_success">Share dialog opens successfully!</string>
    <string name="facebook_share_cancel">Share cancelled</string>
    <string name="facebook_share_error">Error on Share</string>

    // Error for data
    <string name="load_data_fail">Fail to load data.</string>
    <string name="load_new_data_fail">Fail to load news data.</string>


</resources>
