<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.yuyangma.stockquery.MainActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/main_title"
        android:textSize="28dp"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <AutoCompleteTextView
        android:id="@+id/autoCompleteTextView"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/title_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/getquote_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_getquote"
        android:textSize="22dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <TextView
        android:id="@+id/clear_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_clear"
        android:textSize="22dp"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintHorizontal_bias="0.491" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="192dp" />

    <TextView
        android:id="@+id/favorites_view"
        android:layout_width="88dp"
        android:layout_height="31dp"
        android:text="@string/main_favorites"
        android:textSize="20dp"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="46dp"
        app:layout_constraintTop_toBottomOf="@+id/getquote_view"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.477"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp" />

    <Switch
        android:id="@+id/autorefresh_view"
        android:layout_width="125dp"
        android:layout_height="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="47dp"
        android:text="@string/main_auotrefresh"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/clear_view"
        app:layout_constraintRight_toLeftOf="@+id/refresh_view"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp" />

    <ImageView
        android:id="@+id/refresh_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ic_autorenew_white_36px"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="47dp"
        app:layout_constraintTop_toBottomOf="@+id/clear_view"
        android:layout_marginEnd="8dp" />

    <Spinner
        android:id="@+id/sortby_spinner"
        android:layout_width="130dp"
        android:layout_height="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3" />

    <Spinner
        android:id="@+id/order_spinner"
        android:layout_width="130dp"
        android:layout_height="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.456"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintVertical_bias="0.571" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="238dp"
        android:orientation="horizontal" />

    <ListView
        android:id="@+id/favorites_list_view"
        android:layout_width="337dp"
        android:layout_height="210dp"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent">

    </ListView>

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="282dp"
        android:orientation="horizontal" />
</android.support.constraint.ConstraintLayout>
